# artbrain

./: 69e3341bb90d6c85ed3ac618[1].html  README.md  ts3dmn.py
brain/: BrainLayer.py  FuncArea.py  auditorynerve.py  brain.py  brainlayer.py  brains.py  cuda.c  fcbrain.py  feeltest.py  hzk.py  idw.py  mnistdata.py  mnistdatabin.py  neuron.py  neuron1217.py  neuron1218.py  opticnerve.py  opticnerve1217.py  opticnerve1218.py  opticnervetest.py  test.py  tfopticnervetest.py
pallium/: BrainLayer.cpp  BrainLayer.h  CMakeLists.txt  Timer.cpp  Timer.h  conv2d.cpp  conv2d.h  grub.cpp  hzk16.cpp  hzk16.h  mnist.cpp  mnist.h  nerve.cpp  nerve.h  neu.cpp  neu.h  neuron.hpp  opticnerve.cpp  opticnerve.h  pallium.vcxproj  pallium.vcxproj.filters  readme.md  tb.cpp  testbench.cpp  testneu.cpp  testthread.cpp  thread_pool.cpp  thread_pool.h  topone.cpp  topone.h
